--- a/Arch install.ipynb
+++ b/Arch install.ipynb
@@ -165,7 +165,7 @@
     "pacman -S pacman-contrib automake iptables-nft nfs-utils nilfs-utils inetutils dnsutils bridge-utils dnsmasq ntp numlockx poppler-glib\n",
     "pacman -S acpi acpi_call acpid openbsd-netcat ipset nss-mdns tumbler hdparm laptop-detect less\n",
     "pacman -S gvfs gvfs-smb gvfs-nfs gvfs-afc input-devices-support dconf-editor exfatprogs file-roller\n",
-    "pacman -S reflector tlp wget flatpak pcmanfm vim-plugins usbutils firewalld bash-completion rsync openssh ntfs-3g dmraid unzip unrar gzip\n",
+    "pacman -S reflector tlp wget2 flatpak pcmanfm vim-plugins usbutils firewalld bash-completion rsync openssh ntfs-3g dmraid unzip unrar gzip\n",
     "pacman -S mesa xf86-video-intel nvidia nvidia-settings nvidia-utils bluez bluez-utils blueberry\n",
     "pacman -S sof-firmware alsa-firmware alsa-utils alsa-plugins alsa-support pipewire pipewire-pulse pipewire-alsa pipewire-jack pavucontrol mpv\n",
     "\n",
